fix popup issue on mobile

--- a/src/scss/parts/popup.scss
+++ b/src/scss/parts/popup.scss
@@ -37,11 +37,25 @@
     &__body {
         margin-top: 15vh;
         border-radius: 8px;
-        padding: 80px 35px 40px 70px;
         position: relative;
         overflow: hidden;
         background: rgba(0, 0, 0, 0.7);
         backdrop-filter: blur(20.5px);
+
+        padding: 80px 35px 40px 70px;
+
+        @media (max-width: 1230px) {
+            padding: 80px 35px 40px 70px;
+            width: calc(100% - 30px);
+        }
+
+        @media (max-width: 1024px) {
+            padding: 50px 15px 30px 15px;
+        }
+
+        @media (max-width: 768px) {
+            padding: 50px 15px 30px 15px;
+        }
     }
 
     // .popup__content
@@ -49,22 +63,38 @@
     &__content {
         max-height: 60vh;
         overflow-y: auto;
+
         padding-right: 35px;
 
-        &::-webkit-scrollbar {
-            width: 20px;
+        @media (max-width: 1230px) {
+            padding-right: 35px;
         }
 
-        &::-webkit-scrollbar-track {
-            background: $blue;
-            border-left: 9px solid #3d3d3d;
-            border-right: 9px solid #3d3d3d;
+        @media (max-width: 1024px) {
+            padding-right: 15px;
         }
 
-        &::-webkit-scrollbar-thumb {
-            background: $blue;
-            border-left: 7px solid #3d3d3d;
-            border-right: 7px solid #3d3d3d;
+        @media (max-width: 768px) {
+            padding-right: 15px;
+            max-height: 70vh;
+        }
+
+        @media (any-hover: hover) {
+            &::-webkit-scrollbar {
+                width: 20px;
+            }
+
+            &::-webkit-scrollbar-track {
+                background: $blue;
+                border-left: 9px solid #3d3d3d;
+                border-right: 9px solid #3d3d3d;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background: $blue;
+                border-left: 7px solid #3d3d3d;
+                border-right: 7px solid #3d3d3d;
+            }
         }
     }
 
